[package]
name = "cpython-json"
version = "0.0.1"
authors = ["Ian Weller <ianweller@buttslol.net>"]
description = "Converts native Python objects into serde_json Values and back again"
repository = "https://github.com/ianweller/rust-cpython-json"
keywords = ["python"]
license = "MIT/Apache-2.0"

[dependencies]
serde_json = "0.8"

[dependencies.cpython]
version = "0.1"
default-features = false

[features]
default = ["python3-sys"]
python27-sys = ["cpython/python27-sys"]
python3-sys = ["cpython/python3-sys"]
