[package]
name = "cpython-json"
version = "0.1.1"
authors = ["Iliana Weller <ilianaw@buttslol.net>"]
description = "Converts native Python objects into serde_json Values and back again"
readme = "README.md"
repository = "https://github.com/ilianaw/rust-cpython-json"
documentation = "https://docs.rs/cpython-json"
keywords = ["python", "json"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml"]

[dependencies]
serde_json = "0.8"

[dependencies.cpython]
version = "0.1"
default-features = false

[features]
default = ["python3-sys"]
python27-sys = ["cpython/python27-sys"]
python3-sys = ["cpython/python3-sys"]
