[package]
name = "cpython-json"
version = "0.2.0"
authors = ["Iliana Weller <ilianaw@buttslol.net>"]
description = "Converts native Python objects into serde_json Values and back again"
readme = "README.md"
repository = "https://github.com/ilianaw/rust-cpython-json"
documentation = "https://docs.rs/cpython-json"
keywords = ["python", "json"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml"]

[badges]
travis-ci = { repository = "ilianaw/rust-cpython-json", branch = "master" }

[dependencies]
quick-error = "1.2"
serde_json = "1.0"

[dependencies.cpython]
version = "0.2"
default-features = false

[features]
default = ["python3-sys"]
python27-sys = ["cpython/python27-sys"]
python3-sys = ["cpython/python3-sys"]
